Cleaned up some code smells.